@@ -5,6 +5,7 @@ The original source can always be found at:
 	http://archive.ubuntu.com/ubuntu/pool/main/a/apport
 
 Copyright (C) 2006 Canonical Ltd.
+apport/MultipartPostHandler.py is (C) 2006 Will Holcomb <wholcomb@gmail.com>
 
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
